--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="column right">
                     <div class="text">We are a platform for <span class="typing-2"></span></div>
                     <p>Anytime Anywhere check your status</p>
-                    <a href="https://drive.google.com/file/d/1L8PCJWU5bwjQNdZG8rZac2lWr3cghehp/view?usp=sharing">Read About Us</a>
+                    <a href="https://docs.google.com/presentation/d/16zzoR-hrDMT0tQqWhBZIJzoH20YtjJSyMP1Qe79kfgU/edit?usp=sharing">Read About Us</a>
                 </div>
             </div>
         </div>
