--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="text-1">Hello, Welcome to</div>
                 <div class="text-2">Medi-Tracker</div>
                 <div class="text-3">We provide <span class="typing"></span></div>
-                <a href="https://www.linkedin.com/in/mriganka-jana-mak-stark-72546718a/">Check Status</a>
+                <a href="https://www.linkedin.com/in/mriganka-jana-mak-stark-72546718a/" target="_blank">Check Status</a>
             </div>
         </div>
     </section>
@@ -59,7 +59,7 @@
                 <div class="column right">
                     <div class="text">We are a platform for <span class="typing-2"></span></div>
                     <p>Anytime Anywhere check your status</p>
-                    <a href="https://docs.google.com/presentation/d/16zzoR-hrDMT0tQqWhBZIJzoH20YtjJSyMP1Qe79kfgU/edit?usp=sharing">Read About Us</a>
+                    <a href="https://docs.google.com/presentation/d/16zzoR-hrDMT0tQqWhBZIJzoH20YtjJSyMP1Qe79kfgU/edit?usp=sharing" target="_blank">Read About Us</a>
                 </div>
             </div>
         </div>
@@ -193,7 +193,7 @@
                             <i class="fab fa-whatsapp"></i>
                             <div class="info">
                                 <div class="head">Whatsapp</div>
-                                <div class="sub-title"><a href="https://api.whatsapp.com/send/?phone=918653802996&text&app_absent=0">+91 86538 02996</a></div>
+                                <div class="sub-title"><a href="https://api.whatsapp.com/send/?phone=918653802996&text=I%20am%20interested%20to%20join%20your%20session" target="_blank">+91 86538 02996</a></div>
                             </div>
                         </div>
                         <div class="row">
@@ -240,7 +240,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://makstark.business.site/">Mriganka & Ditipriya</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        <span>Created By <a href="https://makstark.business.site/" target="_blank">Mriganka & Ditipriya</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
