--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="text-1">Hello, Welcome to</div>
                 <div class="text-2">Medi-Tracker</div>
                 <div class="text-3">We provide <span class="typing"></span></div>
-                <a href="https://www.linkedin.com/in/mriganka-jana-mak-stark-72546718a/" target="_blank">Check Status</a>
+                <a href="https://mrigajana-makstark.github.io/Medi-Tracker-Health/">Check Status</a>
             </div>
         </div>
     </section>
